--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -225,11 +225,42 @@ body {
   font-family: "Simonetta", cursive;
 }
 
+.carousel-trending-card-title{
+  text-align: left;
+}
+
+.carousel-trending-card-text{
+text-align: left;
+margin: 0;
+}
+
+.carousel-trending-card-img{
+  height: 250px;
+}
+
+.carousel-trending-card-body{
+  min-height: 300px;
+  padding: 15px;
+  font-size: 0.9rem;
+}
+
+.carousel-trending-card-link{
+  font-size: 1rem;
+  padding: 10px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+#adv-awards{
+  padding-left: 10px;
+}
+
 .custom-carousel-controls{
   background-color: #000;
   max-width: 50px;
   max-height: 70px;
-  top: 35%;
+  top: 200px;
 }
 
 .carousel-top-btn {
