--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -1,3 +1,10 @@
+:root {
+  --input-padding-x: 1.5rem;
+  --input-padding-y: .75rem;
+}
+
+
+
 /* Main Naigation Bar on Top CSS Start */
 .navbar-brand {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont,
@@ -12,6 +19,15 @@
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   font-size: 14.4px;
+}
+
+.navbar-nav a button{
+  width: 100%;
+  /* margin-left: 3px; */
+}
+
+.navbar-nav a{
+  padding: 5px;
 }
 /* Main Naigation Bar on Top CSS End */
 
@@ -312,6 +328,153 @@ margin: 0;
   transform: scale(0, 0);
   border-radius: 50%;
 }
+
+
+
+/* Sign Up and Sign In Page CSS Start */
+
+.card-signin-signup {
+  border: 0;
+  border-radius: 1rem;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+}
+
+.card-signin-signup .card-title {
+  margin-bottom: 1rem;
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+
+.card-signin-signup .card-body {
+  /*padding: 2rem;*/
+}
+
+.form-signin-signup {
+  width: 100%;
+}
+
+.form-signin-signup .btn {
+  font-size: 80%;
+  border-radius: 5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  transition: all 0.2s;
+}
+
+.form-label-group {
+  position: relative;
+  /*margin-bottom: 1rem;*/
+  margin-bottom: 0.5rem;
+}
+
+.form-label-group label{
+  cursor: text;
+}
+
+.form-label-group input {
+  height: auto;
+  border-radius: 2rem;
+}
+
+.signup-input input{
+  border-radius: 0.5rem;
+}
+
+.form-label-group>input,
+.form-label-group>label {
+  padding: var(--input-padding-y) var(--input-padding-x);
+}
+
+.form-label-group>label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+  /* Override default `<label>` margin */
+  line-height: 1.5;
+  color: #495057;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  transition: all .1s ease-in-out;
+}
+
+.form-label-group input::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input:-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::-moz-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::placeholder {
+  color: transparent;
+}
+
+.form-label-group input:not(:placeholder-shown) {
+  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-bottom: calc(var(--input-padding-y) / 3);
+}
+
+.form-label-group input:not(:placeholder-shown)~label {
+  padding-top: calc(var(--input-padding-y) / 3);
+  padding-bottom: calc(var(--input-padding-y) / 3);
+  font-size: 12px;
+  color: #777;
+}
+
+.btn-google {
+  color: white;
+  background-color: #ea4335;
+}
+
+.btn-facebook {
+  color: white;
+  background-color: #3b5998;
+}
+
+/* Fallback for Edge
+-------------------------------------------------- */
+
+@supports (-ms-ime-align: auto) {
+  .form-label-group>label {
+      display: none;
+  }
+
+  .form-label-group input::-ms-input-placeholder {
+      color: #777;
+  }
+}
+
+/* Fallback for IE
+-------------------------------------------------- */
+
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
+  .form-label-group>label {
+      display: none;
+  }
+
+  .form-label-group input:-ms-input-placeholder {
+      color: #777;
+  }
+}
+
+
+/* Sign Up and Sign In Page CSS End */
+
+
+
 
 /* Carousel Code that keeps the cards in one row and not in multiple rows. Do not Remove below Code. Its Very Important */
 /* NOTE : VERY IMPORTANT CODE. MAGIC IS HAPPENING HERE. DO NOT TOUCH. DANGER */
