--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -4,6 +4,15 @@
 }
 
 
+.theme-gradient{
+  background-image: linear-gradient(
+      135deg,
+      #0061f2 0%,
+      rgba(105, 0, 199, 0.8) 100%
+    );
+  
+}
+
 
 /* Main Naigation Bar on Top CSS Start */
 .navbar-brand {
@@ -78,6 +87,7 @@
 .main-content {
   position: relative;
   top: 75px;
+  max-width: 100vw;
 }
 
 .masthead-heading {
@@ -340,13 +350,13 @@ margin: 0;
 }
 
 .card-signin-signup .card-title {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   font-weight: 300;
   font-size: 1.5rem;
 }
 
 .card-signin-signup .card-body {
-  /*padding: 2rem;*/
+  padding: 2rem;
 }
 
 .form-signin-signup {
@@ -364,8 +374,7 @@ margin: 0;
 
 .form-label-group {
   position: relative;
-  /*margin-bottom: 1rem;*/
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .form-label-group label{
